tests/ui/half-open-range-patterns/pat-tuple-5.stderr
error[E0308]: mismatched types
  --> $DIR/pat-tuple-5.rs:5:10
   |
LL |     match (0, 1) {
   |           ------ this expression has type `({integer}, {integer})`
LL |         (PAT ..) => {}
   |          ^^^ expected `({integer}, {integer})`, found `u8`
   |
   = note: expected tuple `({integer}, {integer})`
               found type `u8`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
